comment and break the line of code

--- a/fusion_two_organs.ipynb
+++ b/fusion_two_organs.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -51,19 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "example:\n",
+    "Change from:\n",
+    "\n",
+    "|organ 1              | organ 2               | organ 1 score     | organ 2 score    |\n",
+    "|data/branch/123.jpg  | data/entire/256.jpg   | 0.6               | 0.4              |\n",
+    "\n",
+    "to:\n",
+    "\n",
+    "|organ 1              | organ 2               | organ 1 score     | organ 2 score    |\n",
+    "|xxxxxxxxxxxxx        | xxxxxxxxxxxxx         | 0.6               | 0.4              |\n",
+    "'''\n",
     "if (flag_preprocess):\n",
-    "    f_1st = open('./fusion_data/' + 'single_organ_score/test_result_50_' + organ_1st + '_pretrained.txt', 'r')\n",
-    "    f_2nd = open('./fusion_data/' + 'single_organ_score/test_result_50_' + organ_2nd + '_pretrained.txt', 'r')\n",
-    "    fo_1st = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/test_result_50_' +\n",
-    "                  organ_1st + '_pretrained.txt', 'w')\n",
-    "    fo_2nd = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/test_result_50_' +\n",
-    "                  organ_2nd + '_pretrained.txt', 'w')\n",
+    "    f_1st = open('./fusion_data/' + 'single_organ_score/test_result_50_' +\n",
+    "                 organ_1st + '_pretrained.txt', 'r')\n",
+    "    f_2nd = open('./fusion_data/' + 'single_organ_score/test_result_50_' +\n",
+    "                 organ_2nd + '_pretrained.txt', 'r')\n",
+    "    fo_1st = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "                  '_50_species/test_result_50_' + organ_1st + '_pretrained.txt', 'w')\n",
+    "    fo_2nd = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "                  '_50_species/test_result_50_' + organ_2nd + '_pretrained.txt', 'w')\n",
     "\n",
     "    count_line = 0\n",
     "    for line_1st in f_1st:\n",
@@ -81,8 +95,10 @@
     "    fo_1st.close()\n",
     "    fo_2nd.close()\n",
     "\n",
-    "    f_1st = open('./fusion_data/' + 'single_organ_score/svm_result_50_' + organ_1st + '_pretrained.txt', 'r')\n",
-    "    f_2nd = open('./fusion_data/' + 'single_organ_score/svm_result_50_' + organ_2nd + '_pretrained.txt', 'r')\n",
+    "    f_1st = open('./fusion_data/' + 'single_organ_score/svm_result_50_' +\n",
+    "                 organ_1st + '_pretrained.txt', 'r')\n",
+    "    f_2nd = open('./fusion_data/' + 'single_organ_score/svm_result_50_' +\n",
+    "                 organ_2nd + '_pretrained.txt', 'r')\n",
     "    fo_1st = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/svm_result_50_' +\n",
     "                  organ_1st + '_pretrained.txt', 'w')\n",
     "    fo_2nd = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/svm_result_50_' +\n",
@@ -120,10 +136,17 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "- sum rule: (score of first organ + score of second organ)\n",
+    "- product rule: (score of first organ * score of second organ)\n",
+    "- max rule: max(score of first organ , score of second organ)\n",
+    "'''\n",
     "nb_class = 50\n",
     "\n",
-    "f_1st = open('./fusion_data/' 'single_organ_score/test_result_50_' + organ_1st + '_pretrained.txt', 'r')\n",
-    "f_2nd = open('./fusion_data/' 'single_organ_score/test_result_50_' + organ_2nd + '_pretrained.txt', 'r')\n",
+    "f_1st = open('./fusion_data/' 'single_organ_score/test_result_50_' +\n",
+    "             organ_1st + '_pretrained.txt', 'r')\n",
+    "f_2nd = open('./fusion_data/' 'single_organ_score/test_result_50_' +\n",
+    "             organ_2nd + '_pretrained.txt', 'r')\n",
     "\n",
     "score_1st = list()\n",
     "score_2nd = list()\n",
@@ -183,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using SVM classification-based"
+    "#### Using  classification based SVM"
    ]
   },
   {
@@ -213,29 +236,29 @@
     "points = list()\n",
     "svm_img_labels = dict()\n",
     "\n",
-    "f_1st = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/svm_result_50_' +\n",
-    "             organ_1st + '_pretrained.txt', 'r')\n",
+    "f_1st = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "             '_50_species/svm_result_50_' + organ_1st + '_pretrained.txt', 'r')\n",
     "for line in f_1st:\n",
     "    component = line.split(' ')\n",
     "    if int(component[2]) % nb_class == 0:\n",
     "        svm_img_labels[component[0].split('/')[-1]] = int(component[1])\n",
     "    ret_1st[component[0].split('/')[-1]].append(float(component[3]))\n",
     "f_1st.close()\n",
-    "f_2nd = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/svm_result_50_' +\n",
-    "             organ_2nd + '_pretrained.txt', 'r')\n",
+    "f_2nd = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "             '_50_species/svm_result_50_' + organ_2nd + '_pretrained.txt', 'r')\n",
     "for line in f_2nd:\n",
     "    component = line.split(' ')\n",
     "    ret_2nd[component[0].split('/')[-1]].append(float(component[3]))\n",
     "f_2nd.close()\n",
     "\n",
+    "# Generate negative points\n",
     "for key in ret_1st.keys():\n",
     "    points.append([ret_1st[key][svm_img_labels[key]], ret_2nd[key][svm_img_labels[key]]])\n",
     "    labels.append(1)\n",
-    "    for index in range(5):\n",
+    "    for index in range(50):\n",
     "        if (index != svm_img_labels[key]):\n",
     "            points.append([ret_1st[key][index], ret_2nd[key][index]])\n",
     "            labels.append(0)\n",
-    "        #rand_neg_point = rand_neg_point + 1\n",
     "\n",
     "svm.fit(points, labels)\n",
     "print(labels.count(0))\n",
@@ -245,8 +268,8 @@
     "ret_2nd_test = defaultdict(list)\n",
     "test_img_labels = dict()\n",
     "\n",
-    "f_1st_test = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/test_result_50_' +\n",
-    "                  organ_1st + '_pretrained.txt', 'r')\n",
+    "f_1st_test = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "                  '_50_species/test_result_50_' + organ_1st + '_pretrained.txt', 'r')\n",
     "for line in f_1st_test:\n",
     "    component = line.split(' ')\n",
     "    if int(component[2]) % nb_class == 0:\n",
@@ -254,13 +277,14 @@
     "    ret_1st_test[component[0].split('/')[-1]].append(float(component[3]))\n",
     "f_1st_test.close()\n",
     "\n",
-    "f_2nd_test = open('./fusion_data/' + organ_1st + '_' + organ_2nd + '_50_species/test_result_50_' +\n",
-    "                  organ_2nd + '_pretrained.txt', 'r')\n",
+    "f_2nd_test = open('./fusion_data/' + organ_1st + '_' + organ_2nd +\n",
+    "                  '_50_species/test_result_50_' + organ_2nd + '_pretrained.txt', 'r')\n",
     "for line in f_2nd_test:\n",
     "    component = line.split(' ')\n",
     "    ret_2nd_test[component[0].split('/')[-1]].append(float(component[3]))\n",
     "f_2nd_test.close()\n",
     "\n",
+    "# Predict\n",
     "for k in range(1, top_k):\n",
     "    count_true = 0\n",
     "    tot_count = 0\n",
@@ -308,6 +332,7 @@
     }
    ],
    "source": [
+    "# Plot positive and negative points distribution\n",
     "fig, ax = plt.subplots()\n",
     "h = 0.001\n",
     "x_min, x_max = -0.1, 1.1\n",
@@ -343,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Hybrid Model"
+    "####  Hybrid Model using Product rule and SVM classification probability"
    ]
   },
   {
@@ -396,7 +421,7 @@
     "\n",
     "rand_neg_point = random.randint(1, 10000) \n",
     "\n",
-    "\n",
+    "# Generate negative points\n",
     "for key in ret_1st.keys():\n",
     "    points[svm_img_labels[key]].append([ret_1st[key][svm_img_labels[key]], ret_2nd[key][svm_img_labels[key]]])\n",
     "    labels[svm_img_labels[key]].append(1)\n",
@@ -408,7 +433,6 @@
     "                continue\n",
     "            points[index].append([ret_1st[key][index], ret_2nd[key][index]])\n",
     "            labels[index].append(0)\n",
-    "        #rand_neg_point = rand_neg_point + 1\n",
     "\n",
     "for i in range(nb_class):\n",
     "    svm[i].fit(points[i], labels[i])\n",
@@ -433,6 +457,7 @@
     "    ret_2nd_test[component[0].split('/')[-1]].append(float(component[3]))\n",
     "f_2nd_test.close()\n",
     "\n",
+    "# Predict\n",
     "for k in range(1, top_k):\n",
     "    count_true = 0\n",
     "    tot_count = 0\n",
@@ -442,7 +467,6 @@
     "        position = 0\n",
     "        for x, y in zip(ret_1st_test[key], ret_2nd_test[key]):\n",
     "            if (svm[position].predict_proba([[x, y]])[0][1] > 0):\n",
-    "                #print(svm[position].predict_proba([[x, y]])[0][1])\n",
     "                pos_list.append([x, y, svm[position].predict_proba([[x, y]])[0][1], position])\n",
     "            else:\n",
     "                neg_list.append([x, y, svm[position].predict_proba([[x, y]])[0][1], position])\n",
@@ -499,7 +523,7 @@
     }
    ],
    "source": [
-    "# Plot Hybrid model\n",
+    "# Plot positve and negative points distribution for each species\n",
     "fig, ax = plt.subplots()\n",
     "id = 8\n",
     "h = 0.001\n",
