comment top_k scores

--- a/fusion_two_organs.ipynb
+++ b/fusion_two_organs.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "organ_1st = 'branch'\n",
     "organ_2nd = 'entire'\n",
-    "top_k = 6\n",
+    "top_k = 6 # top k scores that you want to know\n",
     "nb_class = 50\n",
     "flag_preprocess = False"
    ]
